<resources>
    <string name="app_name">Lize</string>
    <string name="error_campo_vacio">Rellene todos los campos.</string>
    <string name="error_invalid_email">Introduzca un email válido.</string>
    <string name="error_invalid_pwd">La contraseña debe tener mayúsculas, minúsculas y dígitos.</string>
    <string name="error_incorrect_pwd">La contraseña es incorrecta.</string>
    <string name="error_invalid_pwd_Signup">Ambas contraseñas deben coincidir.</string>
    <string name="LOGIN">Login</string>
    <string name="create_new" />
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_email">Email</string>
    <string name="log_in">Inicia sesión</string>
    <string name="Sign_up">Regístrate</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="Sign_up">Regístrate</string>
    <string name="demasiados_caracteres">Demasiados caracteres introducidos.</string>
    <string name="register">Regístrate</string>
    <string name="cancelar">Cancelar</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="errorColorAmbitoNoSelection">No ha seleccionado ningún color</string>
    <string name="errorColorAmbitoAlredySelected">Este Color ya ha sido seleccionado</string>

    <string name="search">find note</string>
    <string name="more">change view</string>
    <string name="sandwich">change view</string>
    <string name="ambit_default_name">Personal</string>
    <string name="note_default_name">Nueva Nota</string>
    <string name="note_default_body">
        Cards are surfaces that display content and actions on a single topic.
        They should be easy to scan for relevant and actionable information.
        Elements, like text and images, should be placed on them in a way that clearly indicates hierarchy.
    </string>
    <string name="folder_default_name">General</string>

    <!-- MOCKUP NOTE DATA -->
    <string-array name="notes_names">
        <item>TODO</item>
        <item>Lista compra</item>
        <item>Mails</item>
        <item>Important</item>
        <item>13/04/2020</item>
        <item>Nueva Nota</item>
        <item>Nueva Nota 1</item>
        <item>Cumples</item>
        <item>Android</item>
    </string-array>

    <string-array name="notes_body">
        <item>  </item>
        <item> @string/note_default_body </item>
        <item> @string/note_default_body </item>
        <item> @string/note_default_body </item>
        <item> @string/note_default_body </item>
        <item> @string/note_default_body </item>
        <item> @string/note_default_body </item>
        <item> @string/note_default_body </item>
        <item> @string/note_default_body </item>
    </string-array>

    <string name="note_title">Título</string>
    <string name="escribe_aqui">Escribe aquí</string>
    <string name="underline"><u>S</u></string>
    <string name="n">N</string>
    <string name="s">s</string>
    <string name="todo">TODO</string>


    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="share">Compartir</string>
    <string name="add_recordatory">Recordatorio</string>
    <string name="insert_document">Adjuntar archivo</string>
    <string name="insert_image">Añadir imagen</string>
    <string name="add_audio">Grabación</string>
    <string name="add_reminder">Recordatorio</string>
    <string name="keyboard_style">Cambio entre estilo y teclado</string>
    <string name="add_description_msg">Nombre carpeta</string>
    <string name="save_folder">Crear Carpeta</string>
    <string name="android_default_user">Usuario Registrado</string>
    <string name="android_default_email">usuario@email.com</string>

    <string name="crear">Crear</string>
    <string name="back">back</string>
    <string name="color_de_fondo">Color de Fondo:</string>
    <string name="nombre_del_ambito">Nombre del Ámbito:</string>
    <string name="rojo">Rojo</string>
    <string name="morado">Morado</string>
    <string name="indigo">Indigo</string>
    <string name="azul">Azul</string>
    <string name="teal">Teal</string>
    <string name="verde">Verde</string>
    <string name="amarillo">Amarillo</string>
    <string name="naranja">Naranja</string>
    <string name="marr_n">Marrón</string>
    <string name="nuevo_ambito">Nuevo Ambito</string>
    <string name="editar_ambito">Editar Ambito</string>
    <string name="introduce_aqu_el_nombre">Introduce aquí el nombre</string>
    <string name="salir">Salir</string>
    <string name="boton_redondo">boton redondo</string>
    <string name="or">or</string>
    <string name="boton_mas_del_fab">Boton mas del fab</string>
    <string name="boton_add_folder">Boton add folder</string>
    <string name="boton_add_note">Boton add note</string>
    <string name="slogan">slogan</string>
    <string name="perfil">perfil</string>
    <string name="imagebutton">imageButton</string>
    <string name="textview">TextView</string>
    <string name="documents">documents</string>
    <string name="barra">|</string>
    <string name="eliminar_ambito">Eliminar Ambito</string>
    <string name="note_default_metadata">ambitoID - folderTag - last connection</string>
    <string name="numero_notas">Nº notas</string>
    <string name="numero_total_de_notas">numero total de notas</string>
    <string name="n_de_mbitos">Nº de ámbitos</string>
    <string name="numero_de_ambitos">Numero de ambitos</string>
    <string name="password">Contraseña</string>
    <string name="surnames">Apellidos</string>
    <string name="lize">LIZE</string>
    <string name="foto_de_perfil">foto de perfil</string>
    <string name="email">Email</string>
    <string name="name">Nombre</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="repetir_la_contrasena">Repetir la contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="move_note">Mover Nota</string>


    <string name="save_audio">Guardar Audio</string>
    <string name="cancel">Cancelar</string>


</resources>