<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workers.AjustesActivity">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_gradient"
        android:paddingBottom="20dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/ambito_material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/crear_ambito_top_menu"
            android:background="@drawable/settings_gradient"
            app:contentInsetLeft="@dimen/_1sdp"
            app:titleTextColor="?attr/colorOnPrimary"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/imgUser"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/foto_de_perfil"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@drawable/photo_circle"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/fondo_inicio_app"
                />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/android_default_user"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="32sp" />


        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_full_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/lize"
            android:textAllCaps="true"
            android:textColor="#2F7092"
            android:textSize="14sp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rellay1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#65DCE5"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/numNotas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/numero_notas"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/numero_total_de_notas"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="13sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#49BEFF"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/numAmbitos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/n_de_mbitos"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/numero_de_ambitos"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="13sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linlay1"
        style="@style/Settings.Background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="#3797CF"
                    android:textSize="13sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.hint"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/nameSettings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:text="@string/nombre"
                        android:textColor="?attr/colorOnBackground"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:paddingEnd="5dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surnames"
                    android:textColor="#3797CF"
                    android:textSize="13sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/apellidosInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.hint"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/surnamesSettings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:text="@string/apellidos"
                        android:textColor="?attr/colorOnBackground"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:paddingEnd="5dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#3797CF"
                    android:textSize="13sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.hint"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/emailSettings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:text="@string/email"
                        android:textColor="?attr/colorOnBackground"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:paddingLeft="5dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="#3797CF"
                    android:textSize="13sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pswInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.hint"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="5dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/pswSettings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:text="@string/password"
                        android:textColor="?attr/colorOnBackground"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:singleLine="true"
                        android:paddingLeft="5dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/guardar_cambios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:radius="50dip"
                    android:text="@string/guardar_cambios"
                    android:background="@drawable/settings_gradient"
                    app:cornerRadius="50dp"
                    app:elevation="7dp" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
